--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,4 +1,4 @@
-FROM node:14 AS builder
+FROM node:16 AS builder
 
 # Createa app directory
 WORKDIR /app
@@ -12,13 +12,5 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-
-FROM node:14
-
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/dist ./dist
-
 EXPOSE 3000
-cmd [ "npm", "run", "start:prod"]
+CMD [ "npm", "run", "migrate"; "npm", "run", "start" ]
